mortgagedc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mortgagedc-svc
  namespace: default
  labels:
    app: mortgagedc-mortgage
spec:
  type: NodePort
  ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
  selector:
    app: mortgagedc-mortgage
